Css to make table of people overflow scroll on smaller devices. This fixes the cookie banner not being visible. [ch1687]

--- a/web/themes/custom/bevan/sass/components/_layout.scss
+++ b/web/themes/custom/bevan/sass/components/_layout.scss
@@ -10,6 +10,9 @@
     width: 100vw;
 }
 
-.contextual-region {
-	
+@media only screen and (max-width : 768px) {
+	.contextual-region {
+		width: 100%;
+		overflow: scroll;
+	}
 }
